--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
   <string name="app_name">WGU APP</string>
-  <string name="title_activity_assessment">AssessmentActivity</string>
   <string name="create_new_text">Add</string>
   <string name="assessment_details_text">Assessment Details</string>
   <string name="terms_text">Terms</string>
@@ -15,6 +14,11 @@
   <string name="save_text">Save</string>
   <string name="date_placeholder">00/00/0000</string>
   <string name="new_assessment">New Assessment</string>
+  <string name="new_mentor">New Mentor</string>
+  <string name="name_text">Name</string>
+  <string name="phone_text">Phone</string>
+  <string name="email_text">Email</string>
+  <string name="mentor_details_text">Mentor Details</string>
   <string-array name="assessment_types">
     <item>Objective</item>
     <item>Performance</item>
