--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,12 @@
   <string name="phone_text">Phone</string>
   <string name="email_text">Email</string>
   <string name="mentor_details_text">Mentor Details</string>
+  <string name="new_course_text">New Course</string>
+  <string name="course_details_text">Course Details</string>
+  <string name="start_date_text">Start Date</string>
+  <string name="end_date_text">End Date</string>
+  <string name="status_text">Status</string>
+  <string name="note_text">Note</string>
   <string-array name="assessment_types">
     <item>Objective</item>
     <item>Performance</item>
