--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
   <string name="end_date_text">End Date</string>
   <string name="status_text">Status</string>
   <string name="note_text">Note</string>
+  <string name="term_details_text">Term Details</string>
+  <string name="new_term_text">New Term</string>
   <string-array name="assessment_types">
     <item>Objective</item>
     <item>Performance</item>
